RoadMapRepository interface and inMemory implementation